...
        case errored
    }
    
    var body: some View {
        NavigationView {
            list
                .navigationTitle("File Transfers")
                .onAppear {
                    updateAuthorizationStatus()
                }
                .onReceive(NotificationCenter.default
                    .publisher(for: .failedToAddToPhotosLibrary, object: nil)
                    .receive(on: RunLoop.main)
...
                    // To keep the background color consistent
                    // when there are no transfers going on...
                    Spacer()
                        .listRowBackground(Color.clear)
                }
            }
            .navigationTitle("Status")
        }
    }
    
    @ViewBuilder
    var list: some View {
        switch horizontalSizeClass {
...
