...
            FilesTab()
                .introspectSplitViewController { splitViewController in
                    splitViewController.preferredSplitBehavior = .tile
                    splitViewController.preferredDisplayMode = .oneBesideSecondary
                }
                .tabItem {
                    Label("Files", systemImage: "folder")
                }
            
            NavigationView {
                SettingsView()
                
                EmptyView()
...
